tutorial disabled, portfoilo update, layout bug fix

--- a/assets/other/scss/style.scss
+++ b/assets/other/scss/style.scss
@@ -6,177 +6,4 @@
 @import "line/title.scss";
 @import "content/content.scss";
 @import "content/hero.scss";
-
-article#page-99 #portfolio-background {
-    z-index: -1;
-
-    display: inline-block;
-    visibility: visible;
-    position: absolute;
-    
-    padding-left: calc(var(--container-hidden-weight) + var(--grid-gutter));
-    padding-right: calc(var(--container-hidden-weight) + var(--grid-gutter));
-    top: calc(var(--grid-gutter) + var(--container-line-y-weight));
-    
-    &>div {
-        scroll-snap-type: y mandatory;
-        overflow-x: hidden;
-        overflow-y: auto;
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        scrollbar-width: none;
-        -ms-overflow-style: none;
-        &::-webkit-scrollbar{
-            display: none;
-        }
-    }
-
-    .portfolio-section {
-        overflow: hidden;
-        scroll-snap-align: start;
-        width: 100%;
-        height: calc(var(--container-line-y-weight) * var(--container-line-y-count) - var(--container-line-y-weight) * 2);
-        padding: 0;
-        margin: 0;
-    }
-
-    .portfolio-section-paragraph{
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        &:nth-child(1) {
-            height: calc(var(--container-line-y-weight) * 2);
-        }
-        &:nth-child(2) {
-            height: calc(var(--container-line-y-weight) * 3);
-        }
-    }
-
-    #portfolio-introduction-hero {
-        height: calc(var(--container-line-y-weight) * 2);
-        
-        &>div{
-            overflow: hidden;
-            position: absolute;
-            right: 0;
-            width: calc(var(--container-line-x-weight) * 4 - var(--container-hidden-weight) + var(--container-ribbon-weight));
-            height: calc(var(--container-line-y-weight) * 2);
-            border-left: calc(var(--grid-gutter) * 2) solid var(--bs-dark);
-            border-bottom: calc(var(--grid-gutter) * 2) solid var(--bs-dark);
-            border-radius: 0 var(--container-ribbon-weight);
-        }
-    }
-
-    #portfolio-introduction-heading {
-        height: calc(var(--container-line-y-weight) - var(--grid-gutter) * 2);
-    }
-
-    #portfolio-introduction-main {
-        &>div{
-            position: absolute;
-            left: 0;
-            width: calc(var(--container-line-x-weight) * 4 - var(--container-hidden-weight) + var(--container-ribbon-weight));
-            height: calc(var(--container-line-y-weight) * 2);
-            border-top: calc(var(--grid-gutter) * 2) solid var(--bs-dark);
-            border-right: calc(var(--grid-gutter) * 2) solid var(--bs-dark);
-            border-radius: 0 var(--container-ribbon-weight);
-
-            overflow: hidden scroll;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-            &::-webkit-scrollbar{
-                display: none;
-            }
-        }
-    }
-
-    .portfolio-introduction-hero-svg-wrapper{
-        position: relative;
-        width: auto;
-        height: auto;
-        
-        &>svg {
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            max-height: calc(var(--container-line-y-weight) - var(--container-ribbon-weight) * 2);
-
-            &>g{
-                stroke-width: calc(var(--grid-gutter) / 2) !important;
-            }
-        }
-    }
-
-    #portfolio-introduction-arrow {
-        position: absolute;
-        bottom: calc(var(--container-ribbon-weight));
-        left: calc(var(--container-line-x-weight) * 4 - var(--grid-gutter) * 4 + var(--container-ribbon-weight) / 2);
-        
-        &>span{
-            position: absolute;
-            bottom: calc(var(--container-line-y-weight));
-            left: -0.375em;
-            
-            color: var(--bs-dark);
-            letter-spacing: 0.25em;
-    
-            -ms-writing-mode: tb-rl;
-            -webkit-writing-mode: vertical-rl;
-            writing-mode: vertical-rl;
-        }
-    
-        &:before {
-            content: "";
-            position: absolute;
-            background: var(--bs-dark);
-            bottom: 0;
-            right: -0.375em;
-            width: calc(var(--grid-gutter) / 2);
-            height: 1.25em;
-            transform: skewX(-31deg);
-        }
-    
-        &:after{
-            content:"";
-            position: absolute;
-            background: var(--bs-dark);
-            bottom: 0;
-            right: 0;
-            width: calc(var(--grid-gutter) / 2);
-            height: calc(var(--container-line-y-weight));
-          }
-    }
-}
-
-main:not([data-page-number="99"][is-open="false"]) {
-    article#page-99 #portfolio-background {
-        transition: height 0.2s ease-in-out 0.8s, width 0.2s ease-in-out 0.2s, padding 0.2s ease-in-out 0.8s;
-        width: 0;
-        height: 0;
-        padding: 0;
-
-        #portfolio-introduction-arrow {
-            bottom: 90vh;
-        }
-    }
-}
-
-main[data-page-number="99"][is-open="false"] {
-    article#page-99 #portfolio-background {
-        transition: height 0.4s ease-in-out 0.8s, width 0.4s ease-in-out 0.2s;
-        width: calc(var(--container-line-x-weight) * var(--container-line-x-count));
-        height: calc(var(--container-line-y-weight) * var(--container-line-y-count) - calc(var(--grid-gutter) + var(--container-line-y-weight)) * 2);
-    }
-
-    .line-x {
-        width: var(--container-hidden-weight) !important;
-    }
-
-    .container-ribbon {
-        border: 0px solid var(--bs-dark) !important;
-    }
-}
+@import "content/portfolio.scss";
